# local-agent

./: .env  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: __init__.py  dependencies.py
api/routers/: chat.py  health.py  tools.py
config/: __init__.py  settings.py
core/: __init__.py  lifespan.py
exception/: __init__.py  exception.py
models/: __init__.py  chat.py  health.py  tool.py
script/: build_vector_store.py
service/: __init__.py  agent_service.py  chat_service.py  vector_store_service.py
static/: chat.html
tools/: __init__.py  knowledge_base.py
